<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="name"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">
        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_domain_24"
            app:key="localAddress"
            app:title="@string/wireguard_local_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="privateKey"
            app:title="@string/ssh_private_key"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_action_copyright"
            app:key="peerPublicKey"
            app:title="@string/wireguard_public_key"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="peerPreSharedKey"
            app:title="@string/wireguard_psk" />
        <EditTextPreference
            app:defaultValue="1420"
            app:icon="@drawable/baseline_public_24"
            app:key="mtu"
            app:title="@string/mtu"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0"
            app:icon="@drawable/ic_baseline_running_with_errors_24"
            app:key="persistentKeepalive"
            app:title="@string/awg_persistent_keepalive"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/awg_junk_cat">
        <EditTextPreference
            app:defaultValue="0"
            app:dialogMessage="@string/awg_jc_sum"
            app:key="jc"
            app:title="@string/awg_jc"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0"
            app:key="jmin"
            app:title="@string/awg_jmin"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0"
            app:key="jmax"
            app:title="@string/awg_jmax"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0"
            app:key="s1"
            app:title="@string/awg_s1"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0"
            app:key="s2"
            app:title="@string/awg_s2"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0"
            app:key="s3"
            app:title="@string/awg_s3"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0"
            app:key="s4"
            app:title="@string/awg_s4"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/awg_header_cat">
        <EditTextPreference
            app:dialogMessage="@string/awg_header_sum"
            app:key="h1"
            app:title="@string/awg_h1"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogMessage="@string/awg_header_sum"
            app:key="h2"
            app:title="@string/awg_h2"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogMessage="@string/awg_header_sum"
            app:key="h3"
            app:title="@string/awg_h3"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogMessage="@string/awg_header_sum"
            app:key="h4"
            app:title="@string/awg_h4"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/awg_ipacket_cat">
        <EditTextPreference
            app:dialogMessage="@string/awg_ipacket_sum"
            app:key="i1"
            app:title="@string/awg_i1"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogMessage="@string/awg_ipacket_sum"
            app:key="i2"
            app:title="@string/awg_i2"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogMessage="@string/awg_ipacket_sum"
            app:key="i3"
            app:title="@string/awg_i3"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogMessage="@string/awg_ipacket_sum"
            app:key="i4"
            app:title="@string/awg_i4"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogMessage="@string/awg_ipacket_sum"
            app:key="i5"
            app:title="@string/awg_i5"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
