<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">

        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="TCP"
            app:entries="@array/mieru_protocol"
            app:entryValues="@array/mieru_protocol"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverProtocol"
            app:title="@string/protocol"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_person_24"
            app:key="serverUsername"
            app:title="@string/username"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="serverPassword"
            app:title="@string/password" />
        <EditTextPreference
            app:icon="@drawable/baseline_public_24"
            app:key="serverMTU"
            app:title="@string/mtu"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/mieru_advanced_cat">
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue=""
            app:entries="@array/mieru_multiplexing"
            app:entryValues="@array/mieru_multiplexing_value"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverMultiplexing"
            app:title="@string/mieru_multiplexing"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPorts"
            app:dialogMessage="@string/mieru_server_ports_sum"
            app:title="@string/mieru_server_ports"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_running_with_errors_24"
            app:key="serverTrafficPattern"
            app:dialogMessage="@string/mieru_traffic_pattern_sum"
            app:title="@string/mieru_traffic_pattern"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>